# mcp7zop

./: .gitignore  LICENSE  README.md  README_ja.md  THIRD_PARTY_LICENSES  pyproject.toml
src/mcp7zop/: __init__.py  __main__.py  client.py  config.py  impl_7z.py  impl_fs.py  server.py
tests/: __init__.py  test_impl7z.py  test_implfs.py
