[project]
name = "mcp7zop"
version = "0.8.12"
description = "Mcp7zOp - A Local MCP server for operating 7-zip CUI interface"
readme = "README.md"
license-files = ["LICENSE"]
authors = [
    { name = "kanok-one", email = "zervoid77@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.6",
    "anyio>=4.9.0",
    "twisted>=25.5.0",
]

[dependency-groups]
dev = [
    "debugpy>=1.8.15",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-tornasync>=0.6.0.post2",
    "pytest-trio>=0.8.0",
    "pytest-twisted>=1.14.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp7zop = "mcp7zop.__main__:main"
